[package]
name = "keysmith"
version = "0.4.0"
edition = "2021"
authors = ["Nick Shockey <shockeynj@gmail.com>"]
readme = "../README.md"
description = "Create keys or ids for data"
repository = "https://github.com/njshockey/keysmith-rs"
homepage = "https://github.com/njshockey/keysmith-rs"
license = "MIT OR Apache-2.0"
keywords = ["database", "text", "utility", "string", "sql"]
categories = ["cryptography","data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.26"
