[package]
name = "usage"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keysmith = { path = "../../keysmith"}
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "time"] }
